Fix img size and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,8 @@ h3 span.sub-title{
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
+  width: 480px;
+  width: 320px;
 }
 
 .movie-wrapper img{
@@ -175,6 +177,14 @@ h3 span.sub-title{
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  height: 480px;
+  width: 320px;
+}
+
+.details-body > div.col-1{
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .details-body > div.col-2{
